# easy-tiler

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/rules/: GEMINI.md
examples/: demo.py  node_demo.py  sequence_demo.py
src/easy_tiler/: __init__.py  factories.py  grid.py  helpers.py  io.py  renderer.py  tiles.py
tests/: test_demo_outputs.py
