[project]
name = "easy-tiler"
version = "0.2.0"
description = "Library for tiling"
readme = "README.md"
authors = [
    { name = "Joseph Barraud", email = "joseph.barraud@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pycairo>=1.23.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "colorcet>=3.1.0",
]

[project.scripts]
easy-tiler = "easy_tiler:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=7.0.0",
    "ruff>=0.15.4",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py313"
preview = true

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"
